force-app/main/default/objects/Contact/fields/CPS_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>CPS_Provider_ID__c</fullName>
    <description>CPS Provider ID to identify faculty on a course. Useable for both credit &amp; noncredit.</description>
    <inlineHelpText>CPS Provider ID to identify faculty on a course. Useable for both credit &amp; noncredit.</inlineHelpText>
    <label>CPS Provider ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>