force-app/main/default/objects/Contact/fields/CSU_ID__c.field-meta.xml
<CustomField>
    <fullName>CSU_ID__c</fullName>
    <description>The CSU ID for a student record.</description>
    <externalId>true</externalId>
    <inlineHelpText>The CSU ID for a student record.</inlineHelpText>
    <label>CSU ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>