force-app/main/default/objects/Contact/fields/EID__c.field-meta.xml
<CustomField>
    <fullName>EID__c</fullName>
    <description>The electronic ID for the student.</description>
    <inlineHelpText>The electronic ID for the student.</inlineHelpText>
    <label>EID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>