force-app/main/default/objects/Contact/fields/Front_Door_ID__c.field-meta.xml
<CustomField>
    <fullName>Front_Door_ID__c</fullName>
    <description>GUID for a new contact that doesn&apos;t look like a SF ID. Defaults on create if not set.</description>
    <externalId>true</externalId>
    <inlineHelpText>GUID for a new contact that doesn&apos;t look like a SF ID. Defaults on create if not set.</inlineHelpText>
    <label>Front Door ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>