force-app/main/default/objects/Contact/fields/HR_Directory_Entry__c.field-meta.xml
<CustomField>
    <fullName>HR_Directory_Entry__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The HR Entry for this contact.</description>
    <inlineHelpText>The HR Entry for this contact.</inlineHelpText>
    <label>HR Directory Entry</label>
    <referenceTo>csumidp__HR_Directory_Entry__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>