force-app/main/default/objects/Contact/fields/HR_Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>HR_Employee_Type__c</fullName>
    <description>Employee Type</description>
    <formula>HR_Directory_Entry__r.csumidp__HR_Employee_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Employee Type</inlineHelpText>
    <label>HR Employee Type</label>
    <type>Text</type>
</CustomField>