force-app/main/default/objects/Contact/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Instructor representation.</description>
    <inlineHelpText>Lookup to Instructor representation.</inlineHelpText>
    <label>Instructor</label>
    <referenceTo>Instructor__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>