force-app/main/default/objects/Contact/fields/Instructor_Headshot__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Headshot__c</fullName>
    <description>File reference for instructor headshot.</description>
    <inlineHelpText>File reference for instructor headshot.</inlineHelpText>
    <label>Instructor Headshot</label>
    <length>18</length>
    <type>Text</type>
</CustomField>