force-app/main/default/objects/Contact/fields/Last_Updated_Via__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Via__c</fullName>
    <description>Last updated source.</description>
    <inlineHelpText>Last updated source.</inlineHelpText>
    <label>Last Updated Via</label>
    <length>80</length>
    <type>Text</type>
</CustomField>