force-app/main/default/objects/Contact/fields/PIDM__c.field-meta.xml
<CustomField>
    <fullName>PIDM__c</fullName>
    <description>Banner PIDM.</description>
    <externalId>true</externalId>
    <inlineHelpText>Banner PIDM.</inlineHelpText>
    <label>PIDM</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>