force-app/main/default/objects/Contact/fields/Primary_Canvas_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Canvas_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Canvas linked LLMS Account.</description>
    <inlineHelpText>Primary Canvas linked LLMS Account.</inlineHelpText>
    <label>Primary Canvas Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This LMS must be Canvas.</errorMessage>
        <filterItems>
            <field>lms_hed__LMS_Account__c.lms_hed__LMS__r.Name</field>
            <operation>equals</operation>
            <value>Canvas</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>lms_hed__LMS_Account__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>