force-app/main/default/objects/Contact/fields/Primary_Canvas_Username__c.field-meta.xml
<CustomField>
    <fullName>Primary_Canvas_Username__c</fullName>
    <description>Primary Canvas Login ID</description>
    <formula>Primary_Canvas_Account__r.lms_hed__Primary_Login__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Primary Canvas Login ID</inlineHelpText>
    <label>Primary Canvas Username</label>
    <type>Text</type>
</CustomField>